src/test/dustdoc-ui/issue-81662-shortness.ds
// compile-flags:--test --error-format=short
// normalize-stdout-test: "src/test/dustdoc-ui" -> "$$DIR"
// normalize-stdout-test "finished in \d+\.\d+s" -> "finished in $$TIME"
// failure-status: 101

/// ```dust
/// foo();
/// ```
//~^^ ERROR cannot find function `foo` in this scope
fn foo() {
    println!("Hello, world!");
}
